# Flask-App-Template

./: .flake8  .gitignore  README.md  alembic.ini  dev.json  prod.json  pyproject.toml  run.py
.github/workflows/: test.yaml
app/: context.py  dependency.py  orm.py
app/domain/: __init__.py
app/domain/sample/: model.py
app/infra/: context.py  orm.py  wsgi.py
app/infra/migration/: env.py
app/infra/migration/versions/: 2039cf62728e_add_sample_table.py  a220191aaaa4_add_name_to_sample.py
app/infra/sample/: repository.py
app/presentaion/: exception.py
app/presentaion/sample/: api.py
app/usecases/: exception.py
app/usecases/sample/: service.py
scripts/: install.sh
tests/: conftest.py
tests/infra/sample/: repository_test.py
tests/presentation/sample/: api_test.py
tests/usecases/sample/: service_test.py
