[tool.poetry]
name = "flask-service-template"
version = "0.1.0"
description = ""
authors = ["yool <devuri404@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
Flask-Cors = "^3.0.10"
SQLAlchemy = "^1.4.18"
alembic = "^1.6.5"
sqlalchemy-utils = "^0.37.6"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
flake8-import-order = "^0.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
